--- a/settings.ini
+++ b/settings.ini
@@ -3,19 +3,19 @@
 host = github
 lib_name = nbdev_template
 # For Enterprise Git add variable repo_name and company name
-# repo_name = analytics
-# company_name = nike
+repo_name = fairfusion
+company_name = FairFusion
 
-user = fastai
-# description = A description of your project
-# keywords = some keywords
-# author = Your Name
-# author_email = email@example.com
-# copyright = Your Name or Company Name
+user = fairfusion
+description = A description of your project
+keywords = Temperature, Humidity, AdaFruit, csv
+author = Luca Mossink
+# author_email =
+copyright = FairFusion B.V.
 branch = master
 version = 0.0.1
 min_python = 3.6
-audience = Developers
+audience = Developers and Researchers
 language = English
 # Set to True if you want to create a more fancy sidebar.json than the default
 custom_sidebar = False
@@ -25,7 +25,7 @@ license = apache2
 status = 2
 
 # Optional. Same format as setuptools requirements
-# requirements = 
+requirements = AdaFruit
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 # Optional. Same format as setuptools dependency-links
